--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,7 +1,7 @@
 main .hero-container > div {
   max-width: unset;
 }
-  
+
 main .hero-container {
   padding: 0;
 }
@@ -12,11 +12,15 @@ main .hero-container {
   min-height: 300px;
 }
 
+.hero-home .hero {
+  min-height: 535px;
+  margin: 0 0 3.75rem;
+}
+
 .hero h1 {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  color: white;
 }
 
 .hero picture {
