--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,12 +10,16 @@
  * governing permissions and limitations under the License.
  */
 
+@import url("../node_modules/normalize.css/normalize.css");
+
+*{
+  box-sizing: border-box;
+}
+
 :root {
   /* colors */
   --link-color: #035fe6;
   --link-hover-color: #136ff6;
-  --background-color: white;
-  --light-color: #eee;
   --dark-color: #ccc;
   --text-color: black;
 
@@ -31,20 +35,20 @@
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
-  --heading-font-size-xl: 40px;
+  --heading-font-size-xl: 2.75rem;
   --heading-font-size-l: 32px;
   --heading-font-size-m: 24px;
   --heading-font-size-s: 20px;
   --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 140px;
 }
 
 @font-face {
+  ascent-override: 95%;
   font-family: roboto-fallback;
   size-adjust: 100.06%;
-  ascent-override: 95%;
   src: local('Arial');
 }
 
@@ -59,14 +63,78 @@
   }
 }
 
+:root .theme-knorr {
+  --link-color: #000;
+  --primary-text-color: #007a33;
+  --secondary-text-color: #fff;
+  --tertiary-text-color: #fff;
+  --background-color: #fff;
+  --primary-color:#007a33;
+  --secondary-color:#000;
+  --tertiary-color:#ffd32e;
+  --secondary-button-background:#fff;
+  --secondary-button-color:#007a33;
+  --footer-color: #007a33;
+  --footer-text-color: #fff;
+  --tab-color-grey:#757575;
+}
+
+:root .theme-tresemme {
+  --link-color: #000;
+  --primary-text-color: #000;
+  --secondary-text-color: #fff;
+  --tertiary-text-color: #eac56f;
+  --background-color: #000;
+  --primary-color:#000;
+  --secondary-color:#eac56f;
+  --tertiary-color:#fff;
+  --secondary-button-background:#fff;
+  --secondary-button-color:#000;
+  --footer-color: #f5f5f5;
+  --footer-text-color: #000;
+}
+
+.primary-button {
+  align-items: center;
+  background-color: var(--primary-color);
+  border: .1rem solid var(--primary-color);
+  color: var(--secondary-text-color);
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 6px;
+}
+
+.theme-tresemme .primary-button {
+  border: .1rem solid var(--tertiary-color);
+  border-radius: unset;
+}
+
+.primary-button:hover {
+  background-color: var(--tertiary-color);
+  border: .1rem solid var(--tertiary-color);
+}
+
+.secondary-button {
+  align-items: center;
+  background-color: var(--secondary-button-background);
+  color: var(--secondary-button-color);
+  border-radius: 25px;
+  border: .1rem solid var(--secondary-button-background);
+}
+
+.theme-tresemme .secondary-button {
+  border-radius: unset;
+  border: .1rem solid var(--secondary-button-color);
+}
+
 body {
-  font-size: var(--body-font-size-m);
-  margin: 0;
-  font-family: var(--body-font-family);
-  line-height: 1.6;
-  color: var(--text-color);
-  background-color: var(--background-color);
   display: none;
+  font-family: var(--body-font-family);
+  font-size: var(--body-font-size-m);
+  line-height: 1.6;
+  margin: 0;
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
 }
 
 body.appear {
@@ -74,7 +142,7 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
+  height: auto;
 }
 
 h1, h2, h3,
@@ -82,8 +150,8 @@ h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
-  margin-top: 1em;
   margin-bottom: .5em;
+  margin-top: 1em;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
@@ -95,8 +163,12 @@ h5 { font-size: var(--heading-font-size-s) }
 h6 { font-size: var(--heading-font-size-xs) }
 
 p, dl, ol, ul, pre, blockquote {
-  margin-top: 1em;
   margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+p {
+  font-size: 1rem;
 }
 
 code, pre {
@@ -112,11 +184,16 @@ pre {
   overflow: scroll;
 }
 
+@media (width < 1200px) {
+  main {
+    padding: 0 1rem 3.75rem;
+  }
+}
+
 main pre {
-  background-color: var(--light-color);
-  padding: 1em;
   border-radius: .25em;
   overflow-x: auto;
+  padding: 1em;
   white-space: pre;
 }
 
@@ -127,29 +204,28 @@ a:any-link {
 }
 
 a:hover {
-  text-decoration: underline;
   color: var(--link-hover-color);
+  text-decoration: underline;
 }
 
 /* buttons */
 a.button:any-link, button {
-  font-family: var(--body-font-family);
-  display: inline-block;
-  box-sizing: border-box;
-  text-decoration: none;
+  background-color: var(--link-color);
   border: 2px solid transparent;
-  padding: 5px 30px;
-  text-align: center;
+  border-radius: 30px;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-family: var(--body-font-family);
   font-style: normal;
   font-weight: 600;
-  cursor: pointer;
-  color: var(--background-color);
-  background-color: var(--link-color);
   margin: 16px 0;
-  white-space: nowrap;
   overflow: hidden;
+  padding: 5px 30px;
+  text-align: center;
+  text-decoration: none;
   text-overflow: ellipsis;
-  border-radius: 30px;
+  white-space: nowrap;
 }
 
 a.button:hover, a.button:focus, button:hover, button:focus  {
@@ -158,7 +234,6 @@ a.button:hover, a.button:focus, button:hover, button:focus  {
 }
 
 button:disabled, button:disabled:hover {
-  background-color: var(--light-color);
   cursor: unset;
 }
 
@@ -169,9 +244,9 @@ a.button.secondary, button.secondary {
 }
 
 main img {
+  height: auto;
   max-width: 100%;
   width: auto;
-  height: auto;
 }
 
 .icon {
@@ -186,7 +261,8 @@ main img {
 }
 
 /* sections */
-main .section {
+
+/* main .section {
   padding: 64px 16px;
 }
 
@@ -194,17 +270,42 @@ main .section {
   main .section {
     padding: 64px 32px;
   }
-}
+} */
 
 @media (width >= 900px) {
   .section > div {
-    max-width: 1200px;
     margin: auto;
+    max-width: 1200px;
   }
 }
 
 /* section metadata */
-main .section.light,
-main .section.highlight {
-  background-color: var(--light-color);
+.container {
+  margin: auto;
+  max-width: 1440px;
+}
+
+.heading {
+  padding: 0;
+}
+
+.heading h2 {
+  font-size: 2.75rem;
+}
+
+.heading p {
+  font-size: 1rem;
+}
+
+.heading h2, .heading p{
+  text-align: center;
+}
+
+.heading-center {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.heading-center #contact-us{
+  margin-top: 0;
 }
