--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -53,6 +53,7 @@ header nav p {
 
 header nav a:any-link {
   color: currentcolor;
+  text-decoration: none;
 }
 
 /* hamburger */
@@ -177,10 +178,12 @@ header nav .nav-sections ul > li {
 
 header nav .nav-sections ul > li > ul {
   margin-top: 0;
+  background-color: var(--primary-color);
+  color: var(--secondary-text-color);
 }
 
 header nav .nav-sections ul > li > ul > li {
-  font-weight: 500;
+  font-weight: 600;
 }
 
 @media (width >= 900px) {
