--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@
 }
 
 :root .theme-knorr {
-  --link-color: #000;
+  --link-color: #007a33;
   --primary-text-color: #007a33;
   --secondary-text-color: #fff;
   --tertiary-text-color: #fff;
@@ -216,7 +216,9 @@ pre {
     padding: 0 1rem 3.75rem;
   }
 }
-
+main {
+  margin-bottom: 5rem;
+}
 main pre {
   border-radius: .25em;
   overflow-x: auto;
