--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,9 @@
   --footer-color: #007a33;
   --footer-text-color: #fff;
   --tab-color-grey: #757575;
+  --acent-color:#dbeddb;
+  --smoke-color:#f6f9f8;
+
 }
 
 :root .theme-tresemme {
