--- a/blocks/product-list/product-list.css
+++ b/blocks/product-list/product-list.css
@@ -21,6 +21,8 @@
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
+  background-color: var(--acent-color);
+  border-radius: 10px;
 }
 
 .product-description {
