--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -45,7 +45,7 @@
 }
 
 .cards > ul > li img {
-  aspect-ratio: 4 / 2;
+ /* aspect-ratio: 4 / 2;*/
   border-radius: 30px;
   object-fit: cover;
   width: 100%;
