--- a/blocks/product-list/product-list.css
+++ b/blocks/product-list/product-list.css
@@ -65,6 +65,10 @@
 
 .product-description pre {
   white-space: pre-wrap;
+  margin: 0;
+    padding: 0;
+    font-family: inherit;
+    font-size: inherit;
 }
 
 @media (width >= 768px) {
